--- a/client/style.css
+++ b/client/style.css
@@ -47,6 +47,8 @@ body {
 .wrapper {
   width: 100%;
   padding: 15px;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .ai {
@@ -115,6 +117,7 @@ form {
   display: flex;
   flex-direction: row;
   gap: 10px;
+  border-radius: 10px;
 }
 
 textarea {
